<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.resale.MainActivity">

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom" />

</menu>